--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -2647,13 +2647,13 @@ msgctxt "trading"
 msgid "регион"
 msgstr "región"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/redesign/trading/trading.html:79 storage/templates/storage/redesign/trading/trading.html:321
-#, fuzzy
 #| msgctxt "wallet"
 #| msgid "Количество"
 msgctxt "trading"
 msgid "количество"
-msgstr "Cantidad"
+msgstr "cantidad"
 
 #: storage/templates/storage/redesign/trading/trading.html:80 storage/templates/storage/redesign/trading/trading.html:308
 #, fuzzy
@@ -2671,20 +2671,20 @@ msgctxt "trading"
 msgid "продавец"
 msgstr "vendedor"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/redesign/trading/trading.html:118
-#, fuzzy
 #| msgid "настройки"
 msgctxt "trading"
 msgid "Настройки поиска"
-msgstr "ajustes"
+msgstr "buscar filtros"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/redesign/trading/trading.html:120
-#, fuzzy
 #| msgctxt "w_trading_new"
 #| msgid "Новое торговое предложение"
 msgctxt "trading"
 msgid "тип предложения"
-msgstr "Nueva oferta de comercio"
+msgstr "tipo de oferta"
 
 #: storage/templates/storage/redesign/trading/trading.html:123 storage/templates/storage/trading/trading.html:70
 msgctxt "w_trading"
@@ -2696,13 +2696,13 @@ msgctxt "w_trading"
 msgid "Покупка"
 msgstr "Compra"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/redesign/trading/trading.html:131
-#, fuzzy
 #| msgctxt "factory"
 #| msgid "создать"
 msgctxt "trading"
 msgid "создатель"
-msgstr "producir"
+msgstr "creador"
 
 #: storage/templates/storage/redesign/trading/trading.html:134 storage/templates/storage/trading/trading.html:84
 msgctxt "w_trading"
@@ -2719,122 +2719,123 @@ msgctxt "w_trading"
 msgid "Мои"
 msgstr "Mio"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/redesign/trading/trading.html:145
-#, fuzzy
 #| msgctxt "goods"
 #| msgid "Орбитальные орудия"
 msgctxt "trading"
 msgid "выбор категории"
-msgstr "Cañon orbital"
+msgstr "categoría"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/redesign/trading/trading.html:148
-#, fuzzy
 #| msgctxt "goods"
 #| msgid "Орбитальные орудия"
 msgctxt "trading"
 msgid "выберите категорию"
-msgstr "Cañon orbital"
+msgstr "seleccionar categoría"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/redesign/trading/trading.html:159
-#, fuzzy
 #| msgctxt "wallet"
 #| msgid "Товар"
 msgctxt "trading"
 msgid "товар"
-msgstr "Bien"
+msgstr "bienes"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/redesign/trading/trading.html:162
-#, fuzzy
 #| msgctxt "w_trading"
 #| msgid "Выберите товар"
 msgctxt "trading"
 msgid "выберите товар"
-msgstr "Escoger bienes"
+msgstr "escoger bienes"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/redesign/trading/trading.html:187
-#, fuzzy
 #| msgctxt "w_trading"
 #| msgid "Поиск"
 msgctxt "trading"
 msgid "поиск"
-msgstr "Buscar"
+msgstr "buscar"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/redesign/trading/trading.html:295 storage/templates/storage/redesign/trading/trading.html:396
-#, fuzzy
 #| msgctxt "w_trading"
 #| msgid "Покупка"
 msgctxt "trading"
 msgid "покупка"
-msgstr "Compra"
+msgstr "compra"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/redesign/trading/trading.html:299
-#, fuzzy
 #| msgctxt "w_trading"
 #| msgid "Владелец"
 msgctxt "trading"
 msgid "владелец"
-msgstr "Dueño"
+msgstr "dueño"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/redesign/trading/trading.html:350
-#, fuzzy
 #| msgctxt "assets"
 #| msgid "стоимость"
 msgctxt "trading"
 msgid "стоимость"
-msgstr "precio total"
+msgstr "coste"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/redesign/trading/trading.html:355
-#, fuzzy
 #| msgctxt "no_storage"
 #| msgid "доставка"
 msgctxt "trading"
 msgid "доставка"
-msgstr "entrega"
+msgstr "transporte"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/redesign/trading/trading.html:362
 msgctxt "trading"
 msgid "итого"
-msgstr ""
+msgstr "total"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/redesign/trading/trading.html:378 storage/templates/storage/redesign/trading/trading.html:397
-#, fuzzy
 #| msgctxt "w_trading"
 #| msgid "Купить"
 msgctxt "trading"
 msgid "купить"
-msgstr "Comprar"
+msgstr "comprar"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/redesign/trading/trading.html:393
-#, fuzzy
 #| msgctxt "w_trading"
 #| msgid "Продажа"
 msgctxt "trading"
 msgid "продажа"
-msgstr "Venta"
+msgstr "venta"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/redesign/trading/trading.html:394
-#, fuzzy
 #| msgctxt "w_trading"
 #| msgid "Продать"
 msgctxt "trading"
 msgid "продать"
-msgstr "Vender"
+msgstr "vender"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/redesign/trading/trading.html:400
-#, fuzzy
 #| msgctxt "w_trading_new"
 #| msgid "Новое торговое предложение"
 msgctxt "trading"
 msgid "Отмена торгового предложения"
-msgstr "Nueva oferta de comercio"
+msgstr "Cancelar oferta"
 
+#. Last modified by Subaru, id 768
 #: storage/templates/storage/redesign/trading/trading.html:401
-#, fuzzy
 #| msgctxt "w_trading_new"
 #| msgid "Торговое предложение успешно создано"
 msgctxt "trading"
 msgid "Ваше торговое предложение будет удалено. Продолжить?"
-msgstr "Oferta comercial creada correctamente"
+msgstr "La oferta será eliminada. ¿Continuar?"
 
 #: storage/templates/storage/redesign/trading/trading.html:402
 #, fuzzy
