--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -2341,10 +2341,11 @@ msgctxt "w_auctions"
 msgid "Сделать ставку"
 msgstr "Wette abschließen"
 
+#. Last modified by Rick, id 547
 #: storage/templates/storage/auctions/auctions.html:29 storage/templates/storage/trading/trading.html:40
 msgctxt "w_trading"
 msgid "Выберите один или несколько критериев справа и нажмите \"Поиск\""
-msgstr "Wählen Sie ein oder mehrere Kriterien auf der rechten Seite und drücken Sie \"Suchen\"."
+msgstr "Wähle ein oder mehrere Kriterien auf der rechten Seite und drücke \"Suchen\"."
 
 #: storage/templates/storage/auctions/auctions.html:30 storage/templates/storage/redesign/trading/trading.html:73 storage/templates/storage/trading/trading.html:41
 msgctxt "w_trading"
@@ -2381,10 +2382,11 @@ msgctxt "w_trading"
 msgid "Действие"
 msgstr "Aktion"
 
+#. Last modified by Rick, id 547
 #: storage/templates/storage/auctions/auctions.html:77 storage/templates/storage/trading/trading.html:99
 msgctxt "w_trading"
 msgid "Выберите товар"
-msgstr "Wählen Sie ein Produkt aus"
+msgstr "Wähle ein Produkt aus"
 
 #: storage/templates/storage/auctions/auctions.html:86 storage/templates/storage/trading/trading.html:109
 msgctxt "w_trading"
@@ -2707,13 +2709,13 @@ msgctxt "trading"
 msgid "Выбранный товар"
 msgstr "Produkt auswählen"
 
+#. Last modified by Rick, id 547
 #: storage/templates/storage/redesign/trading/trading.html:72
-#, fuzzy
 #| msgctxt "w_trading"
 #| msgid "Выберите один или несколько критериев справа и нажмите \"Поиск\""
 msgctxt "w_trading"
 msgid "Выберите один или несколько критериев в настройках поиска"
-msgstr "Wählen Sie ein oder mehrere Kriterien auf der rechten Seite und drücken Sie \"Suchen\"."
+msgstr "Wähle in den Sucheinstellungen ein oder mehrere Kriterien aus"
 
 #. Last modified by Zay, id 547
 #: storage/templates/storage/redesign/trading/trading.html:77 storage/templates/storage/redesign/trading/trading.html:313
@@ -3293,10 +3295,11 @@ msgctxt "w_trading"
 msgid "Нельзя принять оффер из атакованного региона"
 msgstr "Ein Angebot aus einer angegriffenen Region kann nicht angenommen werden"
 
+#. Last modified by Rick, id 547
 #: storage/views/trading/accept_offer.py:100
 msgctxt "w_trading"
 msgid "Нельзя принять собственный оффер"
-msgstr "Sie können Ihr eigenes Angebot nicht annehmen"
+msgstr "Du kannst dein eigenes Angebot nicht annehmen"
 
 #: storage/views/trading/accept_offer.py:108
 msgctxt "w_trading"
@@ -3368,10 +3371,11 @@ msgctxt "w_trading"
 msgid "Отмена оффера"
 msgstr "Stornierung eines Angebots"
 
+#. Last modified by Rick, id 547
 #: storage/views/trading/cancel_offer.py:54
 msgctxt "w_trading"
 msgid "Можно отменить только свой собственный оффер"
-msgstr "Sie können nur Ihr eigenes Angebot stornieren"
+msgstr "Du kannst nur dein eigenes Angebot stornieren"
 
 #: storage/views/trading/create_offer.py:29 storage/views/trading/create_offer.py:40 storage/views/trading/create_offer.py:57 storage/views/trading/create_offer.py:67 storage/views/trading/create_offer.py:78 storage/views/trading/create_offer.py:88 storage/views/trading/create_offer.py:96 storage/views/trading/create_offer.py:107 storage/views/trading/create_offer.py:115 storage/views/trading/create_offer.py:130 storage/views/trading/create_offer.py:143 storage/views/trading/create_offer.py:159 storage/views/trading/create_offer.py:167 storage/views/trading/create_offer.py:200 storage/views/trading/create_offer.py:207 storage/views/trading/create_offer.py:216
 msgctxt "w_trading_new"
@@ -3463,13 +3467,13 @@ msgctxt "w_trading"
 msgid "Некорректный владелец"
 msgstr "Falscher Besitzer"
 
+#. Last modified by Rick, id 547
 #: storage/views/trading/get_offers.py:91
-#, fuzzy
 #| msgctxt "w_trading"
 #| msgid "Выберите товар"
 msgctxt "w_trading"
 msgid "Укажите товар"
-msgstr "Wählen Sie ein Produkt aus"
+msgstr "Produkt angeben"
 
 #: storage/views/trading/get_offers.py:187
 msgctxt "w_trading"
@@ -3496,10 +3500,11 @@ msgctxt "w_trading"
 msgid "Не удалось получить владельца торгового предложения"
 msgstr "Der Inhaber des Handelsangebots ist nicht zu ermitteln"
 
+#. Last modified by Rick, id 547
 #: storage/views/trading/premium_trading.py:85
 msgctxt "w_trading"
 msgid "У вас недостаточно Wild Pass"
-msgstr "Sie haben nicht genügend Wild Pass"
+msgstr "Du hast nicht genügend Wild Pass"
 
 #: storage/views/trading/premium_trading.py:183
 msgctxt "w_trading"
