--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -2413,10 +2413,11 @@ msgctxt "assets"
 msgid "уничтожить"
 msgstr "zerstören"
 
+#. Last modified by Rick, id 547
 #: storage/templates/storage/redesign/assets.html:43
 msgctxt "assets"
 msgid "уверен"
-msgstr ""
+msgstr "Sicher"
 
 #: storage/templates/storage/redesign/assets.html:49
 msgctxt "assets"
