--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -375,29 +375,29 @@ msgstr "abbrechen"
 msgid "Загрузить"
 msgstr "hochladen"
 
+#. Last modified by Rick, id 547
 #: party/templates/party/redesign/new_party.html:15 party/views/management/new_party.py:83
-#, fuzzy
 #| msgctxt "party_manage"
 #| msgid "Глава партии"
 msgctxt "new_party"
 msgid "Новая партия"
-msgstr "Parteivorsitzender"
+msgstr "Neue Partei"
 
+#. Last modified by Rick, id 547
 #: party/templates/party/redesign/new_party.html:19
-#, fuzzy
 #| msgctxt "no_storage"
 #| msgid "Стоимость создания"
 msgctxt "new_party"
 msgid "Стоимость создания партии"
-msgstr "Erstellungskosten"
+msgstr "Kosten für die Gründung einer Partei"
 
+#. Last modified by Rick, id 547
 #: party/templates/party/redesign/new_party.html:25
-#, fuzzy
 #| msgctxt "party_manage"
 #| msgid "Глава партии"
 msgctxt "new_party"
 msgid "Название партии"
-msgstr "Parteivorsitzender"
+msgstr "Parteinamen"
 
 #: party/templates/party/redesign/new_party.html:41 party/templates/party/redesign/party_blocks/no_party.html:21
 msgctxt "no_party"
@@ -601,8 +601,8 @@ msgctxt "party_manage"
 msgid "Должность с таким названием уже есть"
 msgstr "Diese Position ist bereits vergeben"
 
+#. Last modified by Rick, id 547
 #: party/views/management/roles/new_role.py:50 party/views/management/roles/new_role.py:57 party/views/management/roles/new_role.py:65 party/views/management/roles/new_role.py:72 party/views/management/roles/new_role.py:80
-#, fuzzy
 #| msgctxt "party_manage"
 #| msgid "Добавить должность"
 msgctxt "party_manage"
@@ -613,55 +613,55 @@ msgstr "Position erstellen"
 msgid "Закрыть"
 msgstr "Schließen"
 
+#. Last modified by Rick, id 547
 #: party/views/management/roles/new_role.py:56
-#, fuzzy
 #| msgctxt "party_manage"
 #| msgid "название должности"
 msgctxt "party_manage"
 msgid "Название не может быть пустым"
-msgstr "Positionsbezeichnung"
+msgstr "Bezeichnung darf nicht leer sein"
 
 #: party/views/management/roles/new_role.py:64
 msgctxt "party_manage"
 msgid "Достигнуто ограничение на число должностей"
 msgstr "Anfragelimit erreicht"
 
+#. Last modified by Rick, id 547
 #: party/views/management/roles/new_role.py:71
-#, fuzzy
 #| msgctxt "assets"
 #| msgid "Недостаточно средств для оплаты доставки"
 msgctxt "party_manage"
 msgid "Недостаточно прав для создания должности"
-msgstr "Unzureichende Mittel für die Bezahlung der Lieferung"
+msgstr "Unzureichende Rechte zum Erstellen einer Position"
 
 #: party/views/management/roles/new_role.py:79 party/views/management/roles/remove_role.py:77 player/views/color_change.py:102 region/views/do_mining.py:255 storage/views/assets/assets_action.py:253 storage/views/assets/storage_move.py:88 storage/views/storage/cash_transfer.py:144 storage/views/storage/new_storage.py:88 storage/views/storage/upgrade_storage.py:157 storage/views/trading/accept_offer.py:408 storage/views/trading/cancel_offer.py:149 storage/views/trading/create_offer.py:218 storage/views/trading/get_offers.py:208
 msgctxt "mining"
 msgid "Ошибка метода"
 msgstr "Methodenfehler"
 
+#. Last modified by Rick, id 547
 #: party/views/management/roles/remove_role.py:24
-#, fuzzy
 #| msgctxt "repost"
 #| msgid "репост не найден"
 msgctxt "party_manage"
 msgid "Должность не найдена"
-msgstr "Beitrag konnte nicht gefunden werden"
+msgstr "Position nicht gefunden"
 
+#. Last modified by Rick, id 547
 #: party/views/management/roles/remove_role.py:25 party/views/management/roles/remove_role.py:37 party/views/management/roles/remove_role.py:46 party/views/management/roles/remove_role.py:61 party/views/management/roles/remove_role.py:69 party/views/management/roles/remove_role.py:78
-#, fuzzy
 #| msgctxt "party_manage"
 #| msgid "название должности"
 msgctxt "party_manage"
 msgid "Удаление должности"
-msgstr "Positionsbezeichnung"
+msgstr "Eine Position löschen"
 
+#. Last modified by Rick, id 547
 #: party/views/management/roles/remove_role.py:36
-#, fuzzy
 #| msgctxt "party_manage"
 #| msgid "Добавить должность"
 msgctxt "party_manage"
 msgid "Это неудаляемая должность"
-msgstr "Position erstellen"
+msgstr "Dies ist ein nicht entfernbarer Beitrag"
 
 #: party/views/management/roles/remove_role.py:45
 msgctxt "party_manage"
@@ -673,42 +673,42 @@ msgctxt "party_manage"
 msgid "Вы пытаетесь удалить должность другой партии!"
 msgstr "Du versuchst, die Position einer anderen Partei zu entfernen!"
 
+#. Last modified by Rick, id 547
 #: party/views/management/roles/remove_role.py:68
-#, fuzzy
 #| msgctxt "assets"
 #| msgid "Недостаточно средств для оплаты доставки"
 msgctxt "party_manage"
 msgid "Недостаточно прав для удаления должности"
-msgstr "Unzureichende Mittel für die Bezahlung der Lieferung"
+msgstr "Unzureichende Rechte zum Löschen der Position"
 
 #: party/views/management/roles/set_role.py:35
 msgctxt "has_party"
 msgid "В партии может быть только один глава"
 msgstr "Es kann nur einen Anführer pro Partei geben."
 
+#. Last modified by Rick, id 547
 #: party/views/management/roles/set_role.py:36 party/views/management/roles/set_role.py:51 party/views/management/roles/set_role.py:58 party/views/management/roles/set_role.py:65
-#, fuzzy
 #| msgctxt "party_manage"
 #| msgid "название должности"
 msgctxt "has_party"
 msgid "Смена должности"
-msgstr "Positionsbezeichnung"
+msgstr "Positionswechsel"
 
+#. Last modified by Rick, id 547
 #: party/views/management/roles/set_role.py:50 party/views/management/roles/set_role.py:64
-#, fuzzy
 #| msgctxt "assets"
 #| msgid "Недостаточно средств для оплаты доставки"
 msgctxt "has_party"
 msgid "Недостаточно прав для смены должности"
-msgstr "Unzureichende Mittel für die Bezahlung der Lieferung"
+msgstr "Unzureichende Rechte zum Positionswechsel"
 
+#. Last modified by Rick, id 547
 #: party/views/management/roles/set_role.py:57
-#, fuzzy
 #| msgctxt "storage"
 #| msgid "Некорректное число денег игрока"
 msgctxt "has_party"
 msgid "Некорректная партия игрока"
-msgstr "Du hast die falsche Anzahl des Geldes angegeben"
+msgstr "Falsche Spielergruppe"
 
 #: party/views/management/staff/leave_party.py:37 party/views/management/staff/leave_party.py:209
 msgctxt "party"
@@ -1487,13 +1487,13 @@ msgctxt "profile"
 msgid "Некорректный код акцентов игры"
 msgstr "Falscher Besitzer"
 
+#. Last modified by Rick, id 547
 #: player/views/color_change.py:103
-#, fuzzy
 #| msgctxt "mining"
 #| msgid "Ошибка получения финансирования"
 msgctxt "party_manage"
 msgid "Ошибка изменения цветов игры"
-msgstr "Finanzierungsfehler"
+msgstr "Fehler beim Ändern der Spielfarben"
 
 #: player/views/expense_energy.py:28
 msgid "Десять минут ещё не прошло"
@@ -3539,10 +3539,9 @@ msgstr "Drohnen"
 #~ msgid "Производство"
 #~ msgstr "Produktion"
 
-#, fuzzy
 #~ msgctxt "party_manage"
 #~ msgid "Недостаточно прав!"
-#~ msgstr "Nicht ausreichend"
+#~ msgstr "Nicht genügend Rechte!"
 
 #~ msgctxt "factory"
 #~ msgid "Внезапно!"
@@ -3695,22 +3694,19 @@ msgstr "Drohnen"
 #~ msgid "Койки - лимит"
 #~ msgstr "Barracken - Grenzt"
 
-#, fuzzy
 #~ msgctxt "mining"
 #~ msgid "Перемещение Склада"
 #~ msgstr "Verlagerung des Lagers"
 
-#, fuzzy
 #~ msgctxt "assets"
 #~ msgid "Склад №"
-#~ msgstr "Lagerhaus"
+#~ msgstr "Lagerhausnummer"
 
 #~ msgid "incorrect_method"
 #~ msgstr "fehlerhafte_Methode"
 
-#, fuzzy
 #~ msgid "Хэллоуинский ивент"
-#~ msgstr "Halloween-Ereignis"
+#~ msgstr "Halloween-Event"
 
 #, fuzzy
 #~ msgctxt "profile"
