--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-01 01:25+0300\n"
-"PO-Revision-Date: 2023-06-01 01:26+0300\n"
+"POT-Creation-Date: 2023-06-02 23:10+0300\n"
+"PO-Revision-Date: 2023-06-02 23:20+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -254,7 +254,7 @@ msgstr "Error during cancellation"
 #: factory/views/cancel_auto.py:34 factory/views/start_auto.py:29
 #: factory/views/start_auto.py:37 factory/views/start_auto.py:54
 #: factory/views/start_auto.py:63 factory/views/start_auto.py:96
-#: factory/views/start_auto.py:120
+#: factory/views/start_auto.py:124
 #: party/views/management/staff/leave_party.py:38
 #: party/views/management/staff/leave_party.py:210 player/player.py:288
 #: player/player.py:310 region/views/cancel_auto.py:34
@@ -266,7 +266,7 @@ msgstr "Error during cancellation"
 #: region/views/do_mining.py:254 region/views/retrieve_cash.py:41
 #: region/views/start_auto.py:28 region/views/start_auto.py:36
 #: region/views/start_auto.py:46 region/views/start_auto.py:55
-#: region/views/start_auto.py:77 storage/views/assets/assets_action.py:252
+#: region/views/start_auto.py:81 storage/views/assets/assets_action.py:252
 #: storage/views/assets/storage_move.py:37
 #: storage/views/assets/storage_move.py:46
 #: storage/views/assets/storage_move.py:56
@@ -354,13 +354,13 @@ msgctxt "mining"
 msgid "Закрыть"
 msgstr "Close"
 
-#: factory/views/cancel_auto.py:35 factory/views/start_auto.py:121
+#: factory/views/cancel_auto.py:35 factory/views/start_auto.py:125
 #: player/views/change_back_allow.py:57
 #: player/views/change_wiki_hide_allow.py:57 player/views/full_auto_allow.py:57
 #: player/views/set_language.py:54 player/views/set_timezone.py:43
 #: region/views/cancel_auto.py:35 region/views/daily_status.py:65
 #: region/views/daily_status.py:67 region/views/retrieve_cash.py:42
-#: region/views/start_auto.py:78
+#: region/views/start_auto.py:82
 msgid "Ошибка метода"
 msgstr "Method error"
 
@@ -465,7 +465,7 @@ msgstr "Wait until the end of the flight"
 
 #: factory/views/start_auto.py:28 factory/views/start_auto.py:36
 #: factory/views/start_auto.py:53 factory/views/start_auto.py:62
-#: factory/views/start_auto.py:95 factory/views/start_auto.py:119
+#: factory/views/start_auto.py:95 factory/views/start_auto.py:123
 msgctxt "auto_produce"
 msgid "Ошибка автоматического производства"
 msgstr "Automatic production error"
@@ -1046,6 +1046,56 @@ msgstr "Daily Funding Error"
 msgctxt "mining"
 msgid "Нечего забирать"
 msgstr "Nothing to get"
+
+#: player/templates/player/index.html:72
+msgctxt "index"
+msgid "это экономико-политический симулятор"
+msgstr "is an economic and political simulator"
+
+#: player/templates/player/index.html:81
+msgctxt "index"
+msgid "Играть"
+msgstr "Play"
+
+#: player/templates/player/index.html:91
+msgctxt "index"
+msgid "Объединяйтесь в партии для контроля государств."
+msgstr "Unite in parties to control states."
+
+#: player/templates/player/index.html:92
+msgctxt "index"
+msgid "Перекраивайте карту мира."
+msgstr "Redraw the world map."
+
+#: player/templates/player/index.html:93
+msgctxt "index"
+msgid "Создайте бизнес своей мечты - добыча ископаемых, промышленность, торговля."
+msgstr "Create your dream business - mining, industry, trade."
+
+#: player/templates/player/index.html:94
+msgctxt "index"
+msgid "Воюйте и заключайте союзы."
+msgstr "Make war and make alliances."
+
+#: player/templates/player/index.html:95
+msgctxt "index"
+msgid "Расширяйте влияние своего государства."
+msgstr "Expand the influence of your state."
+
+#: player/templates/player/index.html:96
+msgctxt "index"
+msgid "Станьте владельцем популярной газеты, и заработайте на рекламе."
+msgstr "Become the owner of a popular newspaper and earn from advertising."
+
+#: player/templates/player/index.html:99 player/templates/player/index.html:140
+msgctxt "index"
+msgid "Продолжая использование сайта, вы принимаете условия"
+msgstr "By continuing to use the site, you accept the terms of the"
+
+#: player/templates/player/index.html:99 player/templates/player/index.html:140
+msgctxt "index"
+msgid "Пользовательского соглашения"
+msgstr "User Agreement"
 
 #: player/templates/player/profile.html:146
 msgid "player_info"
@@ -2232,7 +2282,7 @@ msgstr ""
 
 #: region/views/start_auto.py:27 region/views/start_auto.py:35
 #: region/views/start_auto.py:45 region/views/start_auto.py:54
-#: region/views/start_auto.py:76
+#: region/views/start_auto.py:80
 msgctxt "mining"
 msgid "Ошибка автоматической добычи ресурсов"
 msgstr "Automatic mining error"
