--- a/locale/pl/LC_MESSAGES/django.po
+++ b/locale/pl/LC_MESSAGES/django.po
@@ -2972,10 +2972,11 @@ msgctxt "assets"
 msgid "Перемещение товара"
 msgstr "Przemieszczenie towaru"
 
+#. Last modified by ID: 1 076, id 1076
 #: storage/views/assets/assets_action.py:89
 msgctxt "assets"
 msgid "Запрещено вывозить товары из атакованных регионов"
-msgstr ""
+msgstr "Zakazano wywozić towary z regionów atakowanych"
 
 #. Last modified by ID: 1 076, id 1076
 #: storage/views/assets/assets_action.py:90 storage/views/assets/assets_action.py:192 storage/views/assets/assets_action.py:232
@@ -2983,10 +2984,11 @@ msgctxt "assets"
 msgid "Уничтожение товара"
 msgstr "Niszczenie towaru"
 
+#. Last modified by ID: 1 076, id 1076
 #: storage/views/assets/assets_action.py:131
 msgctxt "assets"
 msgid "Недостаточно средств для оплаты доставки"
-msgstr ""
+msgstr "Niewystarczająco środków dla opłaty dostawy"
 
 #. Last modified by ID: 1 076, id 1076
 #: storage/views/assets/assets_action.py:138 storage/views/assets/assets_action.py:148
@@ -2994,10 +2996,11 @@ msgctxt "assets"
 msgid "На складе в регионе "
 msgstr "W magazynie w regionie"
 
+#. Last modified by ID: 1 076, id 1076
 #: storage/views/assets/assets_action.py:140
 msgctxt "assets"
 msgid " недостаточно места для товара "
-msgstr ""
+msgstr "niewystarczająco miejsca na towar"
 
 #. Last modified by ID: 1 076, id 1076
 #: storage/views/assets/assets_action.py:141 storage/views/assets/assets_action.py:150
@@ -3011,50 +3014,58 @@ msgctxt "assets"
 msgid ", в наличии: "
 msgstr ", dostępne:"
 
+#. Last modified by ID: 1 076, id 1076
 #: storage/views/assets/assets_action.py:149
 msgctxt "assets"
 msgid " недостаточно товара "
-msgstr ""
+msgstr "niewystarczająco towarów"
 
+#. Last modified by ID: 1 076, id 1076
 #: storage/views/assets/assets_action.py:149
 msgctxt "assets"
 msgid " для передачи."
-msgstr ""
+msgstr "dla przekazania."
 
+#. Last modified by ID: 1 076, id 1076
 #: storage/views/assets/assets_action.py:157
 msgctxt "assets"
 msgid "Товары для передачи не выбраны"
-msgstr ""
+msgstr "Towary dla przekazania nie są wybrane"
 
 #: storage/views/assets/assets_action.py:164
 msgctxt "assets"
 msgid "В целевом Складе заполнены значения"
 msgstr ""
 
+#. Last modified by ID: 1 076, id 1076
 #: storage/views/assets/assets_action.py:171
 msgctxt "assets"
 msgid "Целевой Склад вам не принадлежит"
-msgstr ""
+msgstr "Docelowy Magazyn nie należy do Ciebie"
 
+#. Last modified by ID: 1 076, id 1076
 #: storage/views/assets/assets_action.py:229
 msgctxt "assets"
 msgid "На складе в регионе"
-msgstr ""
+msgstr "W magazynie w regionie"
 
+#. Last modified by ID: 1 076, id 1076
 #: storage/views/assets/assets_action.py:230
 msgctxt "assets"
 msgid "недостаточно товара"
-msgstr ""
+msgstr "niewystarczająco towarów"
 
+#. Last modified by ID: 1 076, id 1076
 #: storage/views/assets/assets_action.py:231
 msgctxt "assets"
 msgid "Требуется:"
-msgstr ""
+msgstr "Potrzebne:"
 
+#. Last modified by ID: 1 076, id 1076
 #: storage/views/assets/assets_action.py:231
 msgctxt "assets"
 msgid ", в наличии:"
-msgstr ""
+msgstr ", dostępne:"
 
 #: storage/views/assets/assets_action.py:238
 msgctxt "assets"
@@ -3066,20 +3077,23 @@ msgctxt "assets"
 msgid "Операции с товарами"
 msgstr ""
 
+#. Last modified by ID: 1 076, id 1076
 #: storage/views/assets/storage_move.py:36 storage/views/assets/storage_move.py:45 storage/views/assets/storage_move.py:55 storage/views/assets/storage_move.py:67 storage/views/assets/storage_move.py:86
 msgctxt "assets"
 msgid "Перемещение Склада"
-msgstr ""
+msgstr "Przemieszczenie Magazynu"
 
+#. Last modified by ID: 1 076, id 1076
 #: storage/views/assets/storage_move.py:38
 msgctxt "assets"
 msgid "Склад не заполнен"
-msgstr ""
+msgstr "Magazyn nie jest zapełniony"
 
+#. Last modified by ID: 1 076, id 1076
 #: storage/views/assets/storage_move.py:47
 msgctxt "assets"
 msgid "Указанный Склад вам не принадлежит"
-msgstr ""
+msgstr "Wskazany Magazyn nie należy do Ciebie"
 
 #: storage/views/assets/storage_move.py:57
 msgctxt "assets"
